BR09-agoda (#8)
* Implement code for fill information